# SortFilterProxyModel_CMake

./: CMakeLists.txt  global.h  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
filters/: alloffilter.h  anyoffilter.h  expressionfilter.h  filter.h  filtercontainer.h  filtercontainerfilter.h  filtersqmltypes.cpp  indexfilter.h  rangefilter.h  regexpfilter.h  rolefilter.h  valuefilter.h
plugins/SortFilterProxyModel/: CMakeLists.txt  qmldir  sortfilterproxymodelplugin.cpp  sortfilterproxymodelplugin.h
proxyroles/: expressionrole.h  filterrole.h  joinrole.h  proxyrole.h  proxyrolecontainer.h  proxyrolesqmltypes.cpp  regexprole.h  singlerole.h  switchrole.h
sorters/: expressionsorter.h  filtersorter.h  rolesorter.h  sorter.h  sortercontainer.h  sortersqmltypes.cpp  stringsorter.h
tests/: indexsorter.cpp  indexsorter.h  testroles.cpp  testroles.h
